--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,187 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<hr>
+<div id="carouselExampleIndicators" class="carousel slide" id="main" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item carousel-photo-1 active">
+    </div>
+    <div class="carousel-item carousel-photo-2">	
+    </div>
+    <div class="carousel-item carousel-photo-3">
+    </div>
+    <div class="carousel-item carousel-photo-4">
+    </div>
+    <div class="carousel-item carousel-photo-5">
+    </div>
+    <div class="carousel-item carousel-photo-6">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<!-- -----------------------ABOUT-SECTION------------------------------------------------ -->
+	<div class="container mt-4">
+		<!-- ------------------------------------------------------------------- -->
+		<dir id="about-section">
+			<div class="d-flex justify-content-around">			
+				<div class="mr-4">
+				  <h2 class="about-title text-white">About ArtGallery</h2>
+			    </div>
+			    <div class="col col-md-8 about-description">	
+				  <p>At our gallery you can buy stunning original art by some the World’s most talented artists. We sell artwork by established "names" as well as the cream of the crop of emerging talent. With regards to the literary art and the musical arts, Aristotle considered epic poetry, tragedy, comedy, Dithyrambic poetry and music to be mimetic or imitative art, each varying in imitation by medium, object, and manner. For example, <i>music imitates with the media of rhythm and harmony, whereas dance imitates with rhythm alone, and poetry with language.</i></p>
+				</div>		
+			</div>
+	
+			<div class="d-flex justify-content-around mt-3">	
+				<div class="col-8 mona-image-description">
+					<h4 class="font-weight-bold">Make Art Accessible to the Masses</h4>
+					<p class="image-description mt-2">
+						Since it's inception back in 2007, Virgo ArtGallery has endeavoured to help foster and build a lively online arts scene, taking on over 4000 artists, enabling them to sell their artworks across the world. Not only this, we've worked tirelessly to build our range of affordable artworks, to enable more people to enjoy the wonders of art. The Gallery presents curated virtual exhibitions on themes relevant and exciting in the context of contemporary creative culture. Our educational programmes aim to reveal the possibilities of artistic expression to young minds, encourage fresh thought and stimulate innovation.
+					</p>		
+				</div>
+				<div class="mona-image-div">
+					<%= image_tag 'mona.jpeg', class:"mona-image rounded-bottom shadow" %>	
+				</div>
+		 	</div>
+		 </dir>
+
+
+		<div class="bg-light mt-3 quotes">
+	        <blockquote class="blockquote text-right">
+	        <p class="blockquote-paragraph mb-0 mr-3">"Art is not what you see,but what you make others see."</p>
+	        <footer class="blockquote-footer mr-3"><cite title="Source Title">EDGAR DEGAS</cite></footer>
+	        </blockquote>
+	    </div>
+	</div>
+<!-- ---------------------------------Latest-arts-section-------------------------------- -->
+
+
+<div id="carouselExampleControls" class="carousel-2 carousel slide mt-5" data-ride="carousel">
+  <div class="carousel-inner container ">
+<hr>
+    <div class="col-12 carousel-item active">
+    	<div class="row d-flex justify-content-center align-items-center">	
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 5 %>	
+		    	<h6>"ArtWork"</h6>
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Great service from ArtGallery. Wide selection of arts. </small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"ArtWork"</h6>	
+		    	<small>Clear and attractive website, great products.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"ArtWork"</h6>	
+		    	<small>Love my artwork from the Glittering Fox.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Quick responses to emails and fast delivery!</small>
+	    	</div>
+    	</div>
+    </div>
+    <div class="col-12 carousel-item">
+    	<div class="row d-flex justify-content-center align-items-center">	
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 5 %>	
+		    	<h6>"ArtWork"</h6>
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+    	</div>
+    </div>
+    <div class="carousel-item">
+    	<div class="row d-flex justify-content-center align-items-center">	
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 5 %>	
+		    	<h6>"ArtWork"</h6>
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+	    	<div class="rating-card m-3">
+		    	<%= link_to '⭐️' * 4 %>	
+		    	<h6>"Service"</h6>	
+		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+	    	</div>
+    	</div>
+    </div>
+ </div>
+	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+	    <span class="carousel-control-prev-icon slider" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+	    <span class="carousel-control-next-icon slider" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
