--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
 <!-- -----------------------ABOUT-SECTION------------------------------------------------ -->
 	<div class="container mt-4">
 		<!-- ------------------------------------------------------------------- -->
-		<dir id="about-section">
+		<div id="about-section">
 			<div class="d-flex justify-content-around">			
 				<div class="mr-4">
 				  <h2 class="about-title text-white">About ArtGallery</h2>
@@ -53,10 +53,10 @@
 					</p>		
 				</div>
 				<div class="mona-image-div">
-					<%= image_tag 'mona.jpeg', class:"mona-image rounded-bottom shadow" %>	
+					<!-- < %= image_tag 'mona.jpeg' class:"mona-image rounded-bottom shadow" %>	 -->
 				</div>
 		 	</div>
-		 </dir>
+		 </div>
 
 
 		<div class="bg-light mt-3 quotes">
@@ -68,98 +68,98 @@
 	</div>
 <!-- ---------------------------------Latest-arts-section-------------------------------- -->
 
+	<hr>
 
-<div id="carouselExampleControls" class="carousel-2 carousel slide mt-5" data-ride="carousel">
-  <div class="carousel-inner container ">
-<hr>
-    <div class="col-12 carousel-item active">
-    	<div class="row d-flex justify-content-center align-items-center">	
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 5 %>	
-		    	<h6>"ArtWork"</h6>
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+<div id="carouselExampleControls" class="carousel carousel-2 slide mt-5" data-ride="carousel">
+	 <div class="carousel-inner container">
+	    <div class="col-12 carousel-item active">
+	    	<div class="row d-flex justify-content-center align-items-center">	
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 5 %>	
+			    	<h6>"ArtWork"</h6>
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Great service from ArtGallery. Wide selection of arts. </small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"ArtWork"</h6>	
+			    	<small>Clear and attractive website, great products.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"ArtWork"</h6>	
+			    	<small>Love my artwork from the Glittering Fox.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Quick responses to emails and fast delivery!</small>
+		    	</div>
 	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Great service from ArtGallery. Wide selection of arts. </small>
+	    </div>
+	    <div class="col-12 carousel-item">
+	    	<div class="row d-flex justify-content-center align-items-center">	
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 5 %>	
+			    	<h6>"ArtWork"</h6>
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
 	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"ArtWork"</h6>	
-		    	<small>Clear and attractive website, great products.</small>
+	    </div>
+	    <div class="col-12 carousel-item">
+	    	<div class="row d-flex justify-content-center align-items-center">	
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 5 %>	
+			    	<h6>"ArtWork"</h6>
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
+		    	<div class="rating-card m-3">
+			    	<%= link_to '⭐️' * 4 %>	
+			    	<h6>"Service"</h6>	
+			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+		    	</div>
 	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"ArtWork"</h6>	
-		    	<small>Love my artwork from the Glittering Fox.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Quick responses to emails and fast delivery!</small>
-	    	</div>
-    	</div>
-    </div>
-    <div class="col-12 carousel-item">
-    	<div class="row d-flex justify-content-center align-items-center">	
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 5 %>	
-		    	<h6>"ArtWork"</h6>
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-    	</div>
-    </div>
-    <div class="carousel-item">
-    	<div class="row d-flex justify-content-center align-items-center">	
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 5 %>	
-		    	<h6>"ArtWork"</h6>
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-	    	<div class="rating-card m-3">
-		    	<%= link_to '⭐️' * 4 %>	
-		    	<h6>"Service"</h6>	
-		    	<small>Absolutely love this, first time purchasing art work and really good.</small>
-	    	</div>
-    	</div>
-    </div>
- </div>
+	    </div>
+	 </div>
 	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 	    <span class="carousel-control-prev-icon slider" aria-hidden="true"></span>
 	    <span class="sr-only">Previous</span>
@@ -168,7 +168,7 @@
 	    <span class="carousel-control-next-icon slider" aria-hidden="true"></span>
 	    <span class="sr-only">Next</span>
 	  </a>
-	</div>
+</div>
 
 
 
