--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,7 @@
 					</p>		
 				</div>
 				<div class="mona-image-div">
-					<!-- < %= image_tag 'mona.jpeg' class:"mona-image rounded-bottom shadow" %>	 -->
+					<%= image_tag 'mona.jpeg', class:"mona-image rounded-bottom shadow" %>	
 				</div>
 		 	</div>
 		 </div>
