--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,10 +33,10 @@
 </div>
 
 <!-- -----------------------ABOUT-SECTION------------------------------------------------ -->
-	<div class="container mt-4">
+	<div class="container mt-5">
 		<!-- ------------------------------------------------------------------- -->
 		<div id="about-section">
-			<div class="d-flex justify-content-around">			
+			<div class="d-flex justify-content-around p-5">			
 				<div class="mr-4">
 				  <h2 class="about-title text-white">About ArtGallery</h2>
 			    </div>
@@ -73,7 +73,7 @@
 <div id="carouselExampleControls" class="carousel carousel-2 slide mt-5" data-ride="carousel">
 	 <div class="carousel-inner container">
 	    <div class="col-12 carousel-item active">
-	    	<div class="row d-flex justify-content-center align-items-center">	
+	    	<div class="row d-flex justify-content-center align-items-center mt-3">	
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 5 %>	
 			    	<h6>"ArtWork"</h6>
@@ -102,55 +102,55 @@
 	    	</div>
 	    </div>
 	    <div class="col-12 carousel-item">
-	    	<div class="row d-flex justify-content-center align-items-center">	
+	    	<div class="row d-flex justify-content-center align-items-center mt-3">	
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 5 %>	
 			    	<h6>"ArtWork"</h6>
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>We are absolutely thrilled - the artworks are exactly as we expected, very quick delivery and very well packaged.</small>
 		    	</div>
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 4 %>	
 			    	<h6>"Service"</h6>	
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>ArtGallery provides a fantastic way to view and own original art at a range of different prices.</small>
 		    	</div>
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 4 %>	
 			    	<h6>"Service"</h6>	
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>I finally found the courage to buy a beautiful painting and I was helped to make use of the affordable art scheme.</small>
 		    	</div>
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 4 %>	
 			    	<h6>"Service"</h6>	
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>Excellent website easy to navigate with thousands of pieces of artwork to choose from,to suit all budgets.</small>
 		    	</div>
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 4 %>	
 			    	<h6>"Service"</h6>	
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>Yes I would highly recommend art gallery. Original  artworks that you can purchase from from established artists!</small>
 		    	</div>
 	    	</div>
 	    </div>
 	    <div class="col-12 carousel-item">
-	    	<div class="row d-flex justify-content-center align-items-center">	
+	    	<div class="row d-flex justify-content-center align-items-center mt-3">	
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 5 %>	
 			    	<h6>"ArtWork"</h6>
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>Fantastic range of artwork at prices to suit all budgets. I bought a painting using an interest free credit facility.</small>
 		    	</div>
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 4 %>	
 			    	<h6>"Service"</h6>	
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>After looking at various sites, yours was straightforward and fairly easy to use. I had responses to queries in good time.</small>
 		    	</div>
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 4 %>	
 			    	<h6>"Service"</h6>	
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>Thank you very much! I am pleased with Gold membership...</small>
 		    	</div>
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 4 %>	
 			    	<h6>"Service"</h6>	
-			    	<small>Absolutely love this, first time purchasing art work and really good.</small>
+			    	<small>Great variety of affordable art.Item dispatched very quickly </small>
 		    	</div>
 		    	<div class="rating-card m-3">
 			    	<%= link_to '⭐️' * 4 %>	
