--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,12 +4,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 85px;
+  height: 80px;
   font-family: calibri;
   background-color: #fff;
   padding: 10px 20px;
   box-sizing: border-box;
-  box-shadow: 2px 2px 12px rgba(0,0,0,.05);
+  // box-shadow: 2px 2px 12px rgba(0,0,0,.05);
   position: fixed;
   top: 0;
   left: 0;
