--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Change my password", class:"btn btn-primary" %>
+    <%= f.button :submit, "Change my password", class:"btn btn-primary submit-btn" %>
   </div>
 <% end %>
 
