--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,23 +1,32 @@
-<div class="container d-flex justify-content-center">
-  <div class="col-6">
-    
-<h2>Forgot your password?</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions", class:"btn btn-primary" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom">
+    <div class="text-secondary ml-3">
+        <%= image_tag 'Virgo.png', class: "logo" %>
+    </div>
 </div>
+
+
+<div class="container"> 
+  <div class="d-flex justify-content-center full-page mt-5">
+    <div class="col-6 mt-5">
+    
+    <h2>Forgot your password?</h2>
+
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs">
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" } %>
+      </div>
+
+      <div class="form-actions mb-2">
+        <%= f.button :submit, "Send me reset password instructions", class:"btn  submit-btn" %>
+        <%= link_to 'Cancel', root_path, class: "btn btn-info" %>
+      </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
+    </div>
+  </div>
 </div>
