--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,30 +1,53 @@
-<div class="container d-flex justify-content-center">
-  <div class="col-6">
-    
-<h2>Sign up</h2>
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom">
+    <div class="text-secondary ml-3">
+        <%= image_tag 'Virgo.png', class: "logo" %>
+    </div>
+</div>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="container">
+  <div class="d-flex justify-content-center full-page mt-5">
+    <div class="col-6 mt-5">    
+    <h2>Sign up</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
-  </div>
-<% end %>
+    <div class="form-inputs">
+      <div class="row">
+            <div class="col">
+               <%= f.input :first_name,
+                            required: true,
+                            autofocus: true,
+                            input_html: { autocomplete: "first name", class: "border-radius-form" }%>
+            </div>
+            <div class="col">
+              <%= f.input :last_name,
+                          required: true,
+                          autofocus: true,
+                          input_html: { autocomplete: "last name", class: "border-radius-form" }%>
+            </div>
+            </div>
+          <%= f.input :email,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" }%>
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
 
-<%= render "devise/shared/links" %>
+        <div class="form-actions mb-2">
+          <%= f.button :submit, "Sign up", class: "btn submit-btn" %>
+          <%= link_to 'Cancel', root_path, class: "btn btn-info" %>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
 </div>
+
