--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,6 @@
 <html>
   <head>
     <title>Art4all</title>
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -14,11 +12,12 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <!-- < % if user_signed_in? %> -->
+    
     <%= render 'shared/flashes' %>
     <%= yield %>
     <p class="notice"><%= notice %></p>
-    <!-- <p class="alert"><%= alert %></p> -->
-
+    <%= render 'shared/footer' %>
+    <!-- < % else %> -->
   </body>
 </html>
