--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,44 +1,56 @@
-<div class="navbar navbar-expand-lg navbar-light navbar-lewagon">
-  <div>
-    <ul class="navbar-nav mr-auto ml-3">
-      <li class="nav-item">
-        <a href="#main" class="nav-link active" id="home-button">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="#about-section" class= "nav-link">About</a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class= "nav-link">Explore</a>
-      </li>
-      </ul>
-  </div>
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottomn ">
+    <div>
+      <ul class="navbar-nav mr-auto ml-3">
+        <% if user_signed_in? %>
+        <li class="nav-item">
+          <a href="#main" class="nav-link active" id="home-button">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#about-section" class= "nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <!-- <a href="#" class= "nav-link">Explore</a> -->
+          <%= link_to 'Explore', arts_path, class:'nav-link' %>
+        </li>
+        <% end %>
+        </ul>
+    </div>
 
-  <div class="text-secondary ml-5">
-      <%= image_tag 'Virgo.png', class: "logo" %>
-  </div>
+    <div class="text-secondary ml-5">
+        <%= image_tag 'Virgo.png', class: "logo" %>
+    </div>
 
 
     <div class="collapse navbar-collapse mr-3" id="navbarSupportedContent">
        <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <% if @query.present? %>
+        <input name="query" class="form-control mr-sm-2" type="search" placeholder="<%= @query %>" aria-label="Search">
+      <% else %>
+        <input name="query" class="form-control mr-sm-2" type="search" aria-label="Search" placeholder="Search by artist or title...">
+      <% end %>
         <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
       </form>
       <ul class="navbar-nav mr-auto">
-        <% if user_signed_in? %>       
+      <% if user_signed_in? %>       
           <li class="nav-item dropdown active">
             <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
             <div class="dropdown-menu dropdown-menu-right">
-              <%= link_to "SignIn", new_user_session_path, class: "dropdown-item" %>
-              <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>         
+              <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
-        <% else %>
+          <% else %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
+            <div class="dropdown-menu dropdown-menu-right">
+            <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
+            <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
+           </div>
           </li>
-        <% end %>
-      </ul>
-    </div>
-</div>
+          <% end %>
+        </ul>
+      </div>
+  </div>
+
+    
 
 
