--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,9 @@
     </div>
 
     <div class="text-secondary ml-5">
+        <%= link_to root_path do  %>
         <%= image_tag 'Virgo.png', class: "logo" %>
+        <% end %>
     </div>
 
 
