--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,4 @@
-.submit-btn {
-	background-color: #5bc0be;
-	color: #fff;
-}
+// .submit-btn {
+// 	background-color: #5bc0be;
+// 	color: #fff;
+// }
