--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,16 +3,20 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 70px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  width: 100%;
   position: relative;
   bottom: 0;
+  left: 0;
 }
+
 .footer-links {
   display: flex;
   align-items: center;
 }
+
 .footer-links a {
   color: black;
   opacity: 0.15;
@@ -20,6 +24,7 @@
   font-size: 24px;
   padding: 0px 10px;
 }
+
 .footer-links a:hover {
   opacity: 1;
   color: #5bc0be;
@@ -30,5 +35,5 @@
 }
 
 .full-page{
-  min-height: calc(100vh - 90px - 55px);
+  min-height: calc(100vh - 70px);
 }
