--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,7 +9,6 @@
   background-color: #fff;
   padding: 10px 20px;
   box-sizing: border-box;
-  // box-shadow: 2px 2px 12px rgba(0,0,0,.05);
   position: fixed;
   top: 0;
   left: 0;
@@ -35,12 +34,18 @@
 
 #home-button {
   background-color: black;
+  border-radius: 6px;
   color: #fff !important;
 }
 
 .nav-link:hover {
+   border-radius: 6px;
   background-color: #292929;
   color: #FFFFFF !important;
   transition: all ease 1s;
+}
+
+.submit-btn{
+  border-radius: 5px;
 }
 
