--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,12 @@
 // Specific CSS for your home-page
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-body {
-	background-color: #fff;
-	margin: 0px;
-    padding: 0px;
+
+html,body{
+  background-color: #fff;
+  width:100%;
+  height:100vh;
+  margin:0;
+  padding:0;
 }
 
 html {
@@ -42,6 +45,7 @@ html {
 }
 
 .carousel {
+  margin-top: 80px;
   height: 670px;
 }
 
