--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,12 +1,33 @@
-<div class="container">
-	<div class="row">
-		<%= @arts.each do |art| %>
-			<div class="col-12 col-md-4">
-				<%= art.photo %>
-				<%= art.name %>
-				<%= art.artist %>
-				<%= art.Price %>	
-			</div>
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-between">
+	<div>
+		<%= link_to "Back", root_path, class: "btn btn-info ml-3" %>				
+	</div>
+	<div>
+		<%= link_to root_path do  %>
+	        <%= image_tag 'Virgo.png', class: "logo" %>		
+		<% end %>	
+	</div>
+	<div>
+		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: " btn btn-secondary" %>
+	</div>
+</div>
+
+<div class="container full-page p-5">
+  <h3 class="text-center mt-5">View All of Our Desks</h3>
+	<div class="row mt-5">
+		<% @arts.each do |art| %>
+			<%= link_to art_path(art) do %>
+				<div class="col-12 col-md-4">
+					<% if art.photo.attached? %>
+					<%= cl_image_tag art.photo.key, height: 300, width: 250, crop: :fill %>
+					<% end %>		
+					<div class="card-content">		
+					<%= art.name %>
+					<%= art.artist %>
+					<%= art.price %>	
+					</div>
+				</div>
+			<% end %>
 		<% end %>
 	</div>
 </div>
