--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom">
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-center">
     <div class="text-secondary ml-3">
         <%= image_tag 'Virgo.png', class: "logo" %>
     </div>
@@ -7,7 +7,7 @@
 
 <div class="container"> 
   <div class="d-flex justify-content-center full-page mt-5">
-    <div class="col-6 mt-5">
+    <div class="col-6" style="margin-top: 100px;">
     
     <h2>Forgot your password?</h2>
 
