--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottomn ">
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom ">
     <div>
       <ul class="navbar-nav mr-auto ml-3">
         <% if user_signed_in? %>
@@ -30,7 +30,7 @@
       <% else %>
         <input name="query" class="form-control mr-sm-2" type="search" aria-label="Search" placeholder="Search by artist or title...">
       <% end %>
-        <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-secondary my-2 my-sm-0 submit-btn" type="submit">Search</button>
       </form>
       <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>       
@@ -38,6 +38,7 @@
             <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
             <div class="dropdown-menu dropdown-menu-right">
               <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+              <%= link_to "Upload Art", new_art_path, class: "dropdown-item" %>
             </div>
           </li>
           <% else %>
@@ -52,6 +53,7 @@
         </ul>
       </div>
   </div>
+
 
     
 
