--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -178,8 +178,8 @@
 	<div class="container p-4">
 		<div class="row">
 			<div class="col card-boxes">
-				<div class="card shadow" style="width: 20rem;">
-					<%= image_tag 'p1.jpeg', class:"card-image rounded" %>
+				<div class="card shadow" style="width: 21rem;">
+					<%= image_tag 'p1.jpeg', class:"card-image"%>
 				  <div class="card-body ml-2">
 				 	<h4>Helen Garden</h4>
 				    <h6>Author : <i>Estera Reut</i></h6>
@@ -188,8 +188,8 @@
 				</div>
 			</div>
 			<div class="col">	
-				<div class="card shadow card-boxes" style="width: 20rem;">
-				  	<%= image_tag 'p2.jpeg', class:"card-image rounded" %>
+				<div class="card shadow card-boxes" style="width: 21rem;">
+				  	<%= image_tag 'p2.jpeg', class:"card-image" %>
 				  <div class="card-body ml-2">
 				   	<h4>Man faces</h4>
 				    <h6>Author : <i>Dimitar Belchev</i></h6>
@@ -198,8 +198,8 @@
 				</div>
 			</div>
 			<div class="col">
-				<div class="card shadow card-boxes" style="width: 20rem;">
-				  	<%= image_tag 'p3.jpeg', class:"card-image rounded" %>
+				<div class="card shadow card-boxes" style="width: 21rem;">
+				  	<%= image_tag 'p3.jpeg', class:"card-image" %>
 				  <div class="card-body ml-2">
 				  	<h4>Helen Garden</h4>
 				    <h6>Author : <i>Geordanna Cordero</i></h6>
@@ -208,18 +208,18 @@
 				</div>	
 			</div>
 			<div class="col">
-				<div class="card shadow card-boxes" style="width: 20rem;">
-				  	<%= image_tag 'p4.jpeg', class:"card-image rounded" %>
+				<div class="card shadow card-boxes" style="width: 21rem;">
+				  	<%= image_tag 'p4.jpeg', class:"card-image" %>
 				  <div class="card-body ml-2">
-				   	<h4></h4>
+				   	<h4>Helen Garden</h4>
 				    <h6>Author : <i>Jean Carlo Emer</i></h6>
 				    <p class="card-text">£ 920</p>
 				  </div>
 				</div>	
 			</div>
 			<div class="col">
-				<div class="card shadow card-boxes" style="width: 20rem;">
-				  <%= image_tag 'p5.jpeg', class:"card-image rounded" %>
+				<div class="card shadow card-boxes" style="width: 21rem;">
+				  <%= image_tag 'p5.jpeg', class:"card-image" %>
 				  <div class="card-body ml-2">
 				  	<h4>Helen Garden</h4>
 				    <h6>Author : <i>Jon Tyson</i></h6>
@@ -228,8 +228,8 @@
 				</div>	
 			</div>
 			<div class="col">
-				<div class="card shadow card-boxes" style="width: 20rem;">
-				  <%= image_tag 'p6.jpeg', class:"card-image rounded" %>
+				<div class="card shadow card-boxes" style="width: 21rem;">
+				  <%= image_tag 'p6.jpeg', class:"card-image" %>
 				  <div class="card-body ml-2">
 				    <h4>Persian Princess</h4>
 				    <h6>Author : <i>McGill Brary</i></h6>
