--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px;
+  height: 100px;
   font-family: calibri;
   background-color: #fff;
   padding: 10px 20px;
@@ -45,7 +45,7 @@
   transition: all ease 1s;
 }
 
-.submit-btn{
+.submitt-btn{
   border-radius: 5px;
 }
 
