--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,38 +15,38 @@ html {
 
 
 .carousel-photo-1 {
-	background-image: asset_url("c1.jpeg");
+	background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset_url("c1.jpeg");
 }
 
 .carousel-photo-2 {
-	background-image: asset_url("c2.jpeg");
+	background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset_url("c2.jpeg");
 }
 
 .carousel-photo-3 {
-	background-image: asset_url("c3.jpeg");	
+	background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset_url("c3.jpeg");	
 }
 
 .carousel-photo-4 {
-	background-image: asset_url("c4.jpeg");	
+	background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset_url("c4.jpeg");	
 }
 
 .carousel-photo-5 {
-	background-image: asset_url("c5.jpeg");	
+	background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset_url("c5.jpeg");	
 }
 
 .carousel-photo-6 {
-	background-image: asset_url("c6.jpeg");	
+	background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset_url("c6.jpeg");	
 }
 
 .carousel-item {
   background-size: cover;
   background-position: center;
-  height: 670px;
+  height: 460px;
 }
 
 .carousel {
-  margin-top: 80px;
-  height: 670px;
+  margin-top: 100px;
+  height: 460px;
 }
 
 // ------------------------------------------------------------------
@@ -118,6 +118,11 @@ html {
 
 .card-image {
 	height: 300px;
+	border-radius: 10px 10px 0 0;
+}
+
+.card-body {
+	overflow: scroll;
 }
 
 .card-text {
@@ -133,26 +138,22 @@ html {
 // //////////////////////////////cards-div//////////////////////////////////////////
 
 .cards-main{
-	height: 80px;
-	margin-top: 20px;
+	height: 50px;
 } 
 
 
 .card-1 {
-	height: 50px;
-	width: 70px;
-	margin-right: 40px;
+	width: 55px;
+	margin-bottom: 12px;
+	margin-right: 10px;
 }
 
 .card-div {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 10px;
 }
-.cards {
-	margin: 10px;
-}
+
 
 
 
