--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,12 @@
 .footer {
-  background: #F4F4F4;
+  // background: #F4F4F4;
+  background: #353535;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 70px;
+  height: 120px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: #fff;
   width: 100%;
   position: relative;
   bottom: 0;
@@ -18,7 +19,7 @@
 }
 
 .footer-links a {
-  color: black;
+  color: #fff;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
