--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,38 +1,37 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-between">
 	<div>
 		<%= link_to root_path do  %>
-	        <%= image_tag 'Virgo.png', class: "logo" %>		
+	        <%= image_tag 'logo.png', class: "logo ml-1" %>		
 		<% end %>	
 	</div>
-	<div class="d-flex">
-		<%= link_to "Upload Art", new_art_path, class: "nav-link btn btn-success mr-2" %>
-		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn btn-secondary" %>
+    <div class="d-flex mr-4">
+		<%= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-3" %>
+		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white", style:"background-color:#5bc0be"; %>
 	</div>
 </div>
 
 
-
-<div class="container full-page mt-5">
-	<h3 class="text-center mt-5">View All of Our Desks</h3>
-	  <div class="row mt-5 p-2">
-	  	<% @arts.each do |art| %>
+<div class="container full-page" style="margin-top: 150px;">		
+	<h3 class="text-center p-2">View All of Our Desks</h3>
+	<div class="row">
+		<% @arts.each do |art| %>
 		<%= link_to art_path(art) do %>
-		<div class="col">	
-		 <div class="card ml-1" style="width: 21rem;">
-			<% if art.photo.attached? %>
-				<%= cl_image_tag art.photo.key, height: 300, width: 334, crop: :fill, class:"card-image" %>
-			<% end %>
-		   	 <div class="card-body">
-			    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			    <%= art.name %>
-				<%= art.artist %>
-				<%= art.price %>
-		   	 </div>
-	 	  </div>
-		</div>
-	   <% end %>
-    <% end %>
-  </div>
+			<div class="col mt-4">	
+				<div class="card" style="width: 21rem;">
+						<% if art.photo.attached? %>
+						<%= cl_image_tag art.photo.key, height: 300, width: 334, crop: :fill, class:"card-image" %>
+						<% end %>
+				   	 <div class="card-body">
+					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					    <%= art.name %>
+						<%= art.artist %>
+						<%= art.price %>
+				   	</div>
+		 	  	</div>
+		 	</div>
+		<% end %>
+		<% end %>
+	</div>
 </div>
 
 
