--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,21 +1,32 @@
-<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-center">
-    <div class="text-secondary">
-        <%= image_tag 'Virgo.png', class: "logo" %>
-    </div>
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-between">
+    <!-- <div class="text-secondary"> -->
+		<div>
+			<%= link_to root_path do  %>
+		        <%= image_tag 'logo.png', class: "logo ml-1" %>		
+			<% end %>	
+		</div>
+        <div class="d-flex">
+			<!-- < %= link_to "Back", arts_path, class: "btn btn-info mr-3" %>	
+						 -->
+			<!-- < %= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-2" %> -->
+			<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white mr-4", style:"background-color:#5bc0be"; %>
+		</div>
+    <!-- </div> -->
 </div>
 
-<div class="container d-flex justify-content-center full-page">
-	<div class=" col-6" style="margin-top: 120px;">
-	<h2>Upload New Art</h2>
-		<div class="art-form mt-3">
-			<%= simple_form_for(@art) do |f|  %>
-			<%= f.input :name, placeholder: "Name", label: false %>
-			<%= f.input :artist, placeholder: "Artist", label: false %>
-			<%= f.input :price, placeholder: "Price", label: false %>
-			<%= f.input :photo, as: :file, label: false %>
-			<%= f.submit class:"btn", style: "background-color: #5bc0be" %>
-			<%= link_to "Back", root_path, class: "btn btn-info" %>
-			<% end %>
+
+	<div class="container d-flex justify-content-center full-page" style="margin-top: 140px">
+		<div class="col-sm-6 p-4" style="background-color: #f3f3f4">
+		<h2 class="text-center mt-3">Upload New Art</h2>
+			<div class="art-form p-4 mt-3">
+				<%= simple_form_for(@art) do |f|  %>
+				<%= f.input :name, placeholder: "Name", label: false %>
+				<%= f.input :artist, placeholder: "Artist", label: false %>
+				<%= f.input :price, placeholder: "Price", label: false %>
+				<%= f.input :photo, as: :file, label: false %>
+				<%= f.submit class:"btn btn-primary mr-2"%>
+				<%= link_to "Back", root_path, class: "btn btn-info" %>
+				<% end %>
+			</div>
 		</div>
-	</div>
-</div>
+	</div>	
