--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,18 @@
-<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-center">
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom">
     <div class="text-secondary ml-3">
-        <%= image_tag 'Virgo.png', class: "logo" %>
+        <%= image_tag 'logo.png', class: "logo ml-1" %>
+    </div>
+    <div>
+      <%= link_to "Log in", new_session_path(resource_name), class: "btn rounded text-white mr-4", style:"background-color:#5bc0be";%>   
     </div>
 </div>
 
 
-<div class="container"> 
+<div class="container" style="margin-top: 112px"> 
   <div class="d-flex justify-content-center full-page mt-5">
-    <div class="col-6" style="margin-top: 100px;">
+    <div class="col-sm-6 p-5 mt-5" style="margin-top: 100px; background-color: #f3f3f4;">
     
-    <h2>Forgot your password?</h2>
+    <h2 class="mb-4">Forgot your password?</h2>
 
     <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
       <%= f.error_notification %>
@@ -21,12 +24,11 @@
                     input_html: { autocomplete: "email" } %>
       </div>
 
-      <div class="form-actions mb-2">
-        <%= f.button :submit, "Send me reset password instructions", class:"btn  submit-btn" %>
+      <div class="form-actions mt-4">
+        <%= f.button :submit, "Send me reset password instructions", class:"btn btn-primary mr-2" %>
         <%= link_to 'Cancel', root_path, class: "btn btn-info" %>
       </div>
       <% end %>
-      <%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
