--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
 
 <div class="footer">
   <div class="footer-copyright d-flex">
-    <a href="#" class="text-decoration-none trademark">&copy; Virgo ArtGallery 2020</a>&nbsp|
-    <a class="text-decoration-none text-dark">&nbspTerms&nbsp</a>|&nbsp
-    <a class="text-decoration-none text-dark">Privacy Policy</a>
+    <a class="text-decoration-none trademark">&copy; Virgo ArtGallery 2020</a>&nbsp|
+    <a class="text-decoration-none text-white">&nbspTerms&nbsp</a>|&nbsp
+    <a class="text-decoration-none text-white">Privacy Policy</a>
   </div>
   <div class="footer-links">
     <a href="https://github.com/RohitSharma66" target="blank"><i class="fab fa-github"></i></a>
