--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom ">
-    <div class="text-secondary ml-2">
+    <div class="text-secondary">
         <%= link_to root_path do  %>
-          <%= image_tag 'Virgo.png', class: "logo" %>
+          <%= image_tag 'logo.png', class: "logo ml-1" %>
         <% end %>
     </div>
 
@@ -9,10 +9,10 @@
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in? %>
         <li class="nav-item">
-          <a href="#main" class="nav-link active mr-2" id="home-button">Home</a>
+          <a href="#main" class="nav-link active mr-1" id="home-button">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#about-section" class= "nav-link mr-2">About</a>
+          <a href="#about-section" class= "nav-link mr-1">About</a>
         </li>
         <li class="nav-item">
           <%= link_to 'Explore', arts_path, class: 'nav-link' %>
@@ -33,7 +33,7 @@
       <% else %>
         <input name="query" class="form-control mr-sm-2" type="search" aria-label="Search" placeholder="Search by artist or title...">
       <% end %>
-        <button class="btn btn-outline-secondary my-2 my-sm-0 submitt-btn" type="submit">Search</button>
+        <button class="btn my-2 my-sm-0" type="submit", style="background-color:#5bc0be">Search</button>
       </form>
       <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>       
