--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -180,9 +180,9 @@
 			<div class="col card-boxes">
 				<div class="card shadow" style="width: 21rem;">
 					<%= image_tag 'p1.jpeg', class:"card-image"%>
-				  <div class="card-body ml-2">
-				 	<h4>Helen Garden</h4>
-				    <h6>Author : <i>Estera Reut</i></h6>
+				  <div class="card-body">
+				 	<h4><i>"Helen Garden"</i></h4>
+				    <h6>Author : Estera Reut</h6>
 				    <p class="card-text">£ 250</p>
 				  </div>
 				</div>
@@ -190,9 +190,9 @@
 			<div class="col">	
 				<div class="card shadow card-boxes" style="width: 21rem;">
 				  	<%= image_tag 'p2.jpeg', class:"card-image" %>
-				  <div class="card-body ml-2">
-				   	<h4>Man faces</h4>
-				    <h6>Author : <i>Dimitar Belchev</i></h6>
+				  <div class="card-body">
+				   	<h4><i>"Man faces"</i></h4>
+				    <h6>Author : Dimitar Belchev</h6>
 				    <p class="card-text">£ 4000</p>
 				  </div>
 				</div>
@@ -200,9 +200,9 @@
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
 				  	<%= image_tag 'p3.jpeg', class:"card-image" %>
-				  <div class="card-body ml-2">
-				  	<h4>Helen Garden</h4>
-				    <h6>Author : <i>Geordanna Cordero</i></h6>
+				  <div class="card-body">
+				  	<h4><i>"Helen Garden"</i></h4>
+				    <h6>Author : Geordanna Cordero</h6>
 				    <p class="card-text">£ 680</p>
 				  </div>
 				</div>	
@@ -210,9 +210,9 @@
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
 				  	<%= image_tag 'p4.jpeg', class:"card-image" %>
-				  <div class="card-body ml-2">
-				   	<h4>Helen Garden</h4>
-				    <h6>Author : <i>Jean Carlo Emer</i></h6>
+				  <div class="card-body">
+				   	<h4><i>"Helen Garden"</i></h4>
+				    <h6>Author : Jean Carlo Emer</h6>
 				    <p class="card-text">£ 920</p>
 				  </div>
 				</div>	
@@ -220,9 +220,9 @@
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
 				  <%= image_tag 'p5.jpeg', class:"card-image" %>
-				  <div class="card-body ml-2">
-				  	<h4>Helen Garden</h4>
-				    <h6>Author : <i>Jon Tyson</i></h6>
+				  <div class="card-body">
+				  	<h4><i>"Helen Garden"</i></h4>
+				    <h6>Author : Jon Tyson</h6>
 				    <p class="card-text">£ 750</p>
 				  </div>
 				</div>	
@@ -230,9 +230,9 @@
 			<div class="col">
 				<div class="card shadow card-boxes" style="width: 21rem;">
 				  <%= image_tag 'p6.jpeg', class:"card-image" %>
-				  <div class="card-body ml-2">
-				    <h4>Persian Princess</h4>
-				    <h6>Author : <i>McGill Brary</i></h6>
+				  <div class="card-body">
+				    <h4><i>"Persian Princess"</i></h4>
+				    <h6>Author : McGill Brary</h6>
 				    <p class="card-text">£ 3000</p>
 				  </div>
 				</div>	
