--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 
 <div class="footer">
   <div class="footer-copyright d-flex">
-    <a class="text-decoration-none trademark">&copy; Virgo ArtGallery 2020</a>&nbsp|
+    <a class="text-decoration-none trademark">&copy; Art Studio 2020</a>&nbsp|
     <a class="text-decoration-none text-white">&nbspTerms&nbsp</a>|&nbsp
     <a class="text-decoration-none text-white">Privacy Policy</a>
   </div>
