--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -6,30 +6,29 @@
 	</div>
     <div class="d-flex mr-4">
 		<%= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-3" %>
-		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white", style:"background-color:#5bc0be"; %>
+		<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white nav-button"%>
 	</div>
 </div>
 
 
-<div class="container full-page" style="margin-top: 150px;">		
-	<h3 class="text-center p-2">View All of Our Desks</h3>
+<div class="container full-page" style="margin-top: 120px;">		
+	<h3 class="text-center p-2" style="color: #5bc0be">View All of Our Arts</h3>
 	<div class="row">
 		<% @arts.each do |art| %>
-		<%= link_to art_path(art) do %>
-			<div class="col mt-4">	
-				<div class="card" style="width: 21rem;">
+			<div class="col card-boxes mt-4">	
+				<%= link_to art_path(art), class:"text-decoration-none" do %>
+					<div class="card" style="width: 21rem;">
 						<% if art.photo.attached? %>
 						<%= cl_image_tag art.photo.key, height: 300, width: 334, crop: :fill, class:"card-image" %>
 						<% end %>
-				   	 <div class="card-body">
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <%= art.name %>
-						<%= art.artist %>
-						<%= art.price %>
-				   	</div>
-		 	  	</div>
+					   	 <div class="card-body">
+						    <h5><i class="text-dark"><%= art.name %></i></h5>	
+							<h6 class="text-dark">Author : <%= art.artist %></h6> 
+							<p class="card-text">£<%= art.price %></p> 
+					   	</div>
+			 	  	</div>
+				<% end %>
 		 	</div>
-		<% end %>
 		<% end %>
 	</div>
 </div>
