--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -9,7 +9,7 @@
 			<!-- < %= link_to "Back", arts_path, class: "btn btn-info mr-3" %>	
 						 -->
 			<!-- < %= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-2" %> -->
-			<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white mr-4", style:"background-color:#5bc0be"; %>
+			<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white mr-4 nav-button" %>
 		</div>
     <!-- </div> -->
 </div>
