--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -1,14 +1,12 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom  d-flex justify-content-between">
-    <!-- <div class="text-secondary"> -->
 		<div>
 			<%= link_to root_path do  %>
 		        <%= image_tag 'logo.png', class: "logo ml-1" %>		
 			<% end %>	
 		</div>
         <div>
-			<%= link_to "Back", arts_path, class: "btn mr-3", style:"background-color:#5bc0be" %>				
+			<%= link_to "Back", arts_path, class: "btn mr-3 nav-button text-white"%>				
 		</div>
-    <!-- </div> -->
 </div>
 
 <div class="container full-page">
