--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
         <%= image_tag 'logo.png', class: "logo ml-1" %>
     </div>
     <div>
-      <%= link_to "Log in", new_session_path(resource_name), class: "btn rounded text-white mr-4", style:"background-color:#5bc0be";%>   
+      <%= link_to "Log in", new_session_path(resource_name), class: "btn rounded text-white mr-4 nav-button"%>   
     </div>
 </div>
 
