--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -110,15 +110,16 @@ html {
 // ////////////////////////////Some Favourite arts///////////////////////////////////
 
 .card {
-	height: 420px;
+	height: 450px;
 	margin-bottom: 25px;
 	border-radius: 10px;
 }
 
 
 .card-image {
-	height: 300px;
+	height: 330px;
 	border-radius: 10px 10px 0 0;
+	background-position: center top;
 }
 
 .card-body {
