--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -131,7 +131,7 @@
 		    	</div>
 	    	</div>
 	    </div>
-	    <div class="col-12 carousel-item">
+	    <div class="col carousel-item">
 	    	<div class="row d-flex justify-content-center align-items-center mt-3">	
 		    	<div class="rating-card">
 			    	<%= link_to '⭐️' * 5 %>	
@@ -177,8 +177,8 @@
 </div>
 	<div class="container p-4">
 		<div class="row">
-			<div class="col card-boxes">
-				<div class="card shadow" style="width: 21rem;">
+			<div class="col">
+				<div class="card shadow card-boxes" style="width: 21rem;">
 					<%= image_tag 'p1.jpeg', class:"card-image"%>
 				  <div class="card-body">
 				 	<h4><i>"Helen Garden"</i></h4>
