--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div>
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-5">
         <% if user_signed_in? %>
         <li class="nav-item">
           <a href="#main" class="nav-link active mr-1" id="home-button">Home</a>
