--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -117,9 +117,11 @@ html {
 
 
 .card-image {
-	height: 330px;
+	// height: 350px;
 	border-radius: 10px 10px 0 0;
-	background-position: center top;
+	// object-fit: scale-down;
+    // object-cover: fill;
+    // object-position: 50% 50%;
 }
 
 .card-body {
