--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -189,7 +189,9 @@
 			</div>
 			<div class="col">	
 				<div class="card shadow card-boxes" style="width: 21rem;">
-				  	<%= image_tag 'p2.jpeg', class:"card-image" %>
+					<!-- <div class="card-image"> -->
+				  	<%= image_tag 'p2.jpeg', class:"card-image"%>	
+					<!-- </div> -->
 				  <div class="card-body">
 				   	<h4><i>"Man faces"</i></h4>
 				    <h6>Author : Dimitar Belchev</h6>
